--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -156,17 +156,4 @@ code { background: #FFF !important; text-align: left !important; font-size: 1.5e
    */
 }
 
-.flow-block { width: 100%; border: 1px solid #ccc; margin-bottom: 10px;  background: rgba(255,255,255,.8); text-align: center; padding: .1em .2em; font-size: .8em;  }
-.flow-block h3 { font-size: .5em; margin-top: 10px; position: absolute; font-weight: bold; }
-.flow-block.title {background: rgba(0,0,0,.6); color: #fff; background: #359BBA;}
-.flow-block.title h3 { margin-left: auto; margin-right: auto; position: relative; }
-.flow-block ul { margin-left: auto; margin-right: auto; }
-.flow-block ul li { display: inline-block; margin-left: 25px; border: 1px solid #ccc; padding: 5px; }
-.flow-block ul li { display: inline-block; margin-left: 25px; border: 1px solid #ccc; background: #eee; padding: 5px; }
-
-.flow-step { float: left; width: 33%; }
-
-#background { width: 100%; height: 100%; z-index: -1; opacity: .1; top: 0; left: 0; }
-#background img { height: 100%; width: 100%; margin: 0; max-width: 100%; max-height: 100%; }
-
-#the-next-six-months { font-size: 1.5em; }
+#intro h1 {font-size: 70px}
