--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -4,9 +4,10 @@ body {
 }
 
 h1 {
-  font-size: 75px;
+  font-size: 65px;
   line-height: 90px;
   font-weight: normal;
+  margin-bottom: 50px;
 }
 
 /*h1.title {font-weight: bold; }*/
@@ -59,18 +60,15 @@ ol li:before {
   content: counter(item) ". ";
   counter-increment: item; }
 
-#roadmap ol {
-  width: 500px; }
-
 /* Code */
 .highlight {
   text-align: left;
   text-shadow: none;
   width: 101%;
+  font-size: 24px;
   }
 
 .highlight code {
-  font-size: 1.5em;
   font-family: Inconsolata
 }
 
@@ -84,20 +82,9 @@ ol li:before {
   color: $brand-lightGrey;
 }
 
-.outro { margin-top: 25px; }
-
 .mega-octicon { font-size: 1em; }
 
 small { font-size: 0.6em; color: $brand-lightGrey; }
-
-.linux code { font-size: 3px; -webkit-column-count: 6; -moz-columns:130px 6; columns:130px 6; }
-
-.matrix tr td { padding: 10px; }
-.matrix tr td:first-child { border-right: 1px solid black; padding: 30px 10px 30px 10px; }
-.matrix tbody tr:last-child td {border-top: 1px solid black; padding: 10px 30px 10px 30px; }
-.matrix tbody tr:last-child td:first-child { border:none; }
-
-.svn tr td, .git tr td { padding: 10px; }
 
 table tr td {
   padding: 2%;
