--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -144,3 +144,7 @@ code { background: #FFF !important; text-align: left !important; font-size: 1.5e
 }
 
 #intro h1 {font-size: 70px}
+
+a { text-shadow: none; }
+
+.github-flow td { vertical-align: middle; font-size: 30px; padding: 0; }
