--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -7,7 +7,7 @@ h1 {
   font-size: 65px;
   line-height: 90px;
   font-weight: normal;
-  margin-bottom: 50px;
+  margin-bottom: 25px;
 }
 
 /*h1.title {font-weight: bold; }*/
@@ -109,7 +109,7 @@ table.squished tr td {
 div.notes { display: none; }
 
 img {
-  max-width: 90%;
+  width: 100%;
 }
 
 .emoji {
