--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -148,3 +148,4 @@ code { background: #FFF !important; text-align: left !important; font-size: 1.5e
 a { text-shadow: none; }
 
 .github-flow td { vertical-align: middle; font-size: 30px; padding: 0; }
+#identifying-strong-open-source ul li { font-size: 30px; }
